added done button

--- a/index.html
+++ b/index.html
@@ -39,25 +39,12 @@
 				<div id="options"></div>
 				<div id="status"></div>
 				<div id="image"></div>
-				<p id="wins"></p>
-				<p id="losses"></p>
+				<div>
+					<p class="done"></p>
+				</div>
 			</div>
 		</div>
 	</div>
-
-	<!--<div id="redo-block">
-		<div class="row">
-			<div class="col-lg-4 offset-lg-4 text-center">
-				<button type="button" class="btn btn-primary btn-lg btn-block" id="start-over">Start
-					Over?</button>
-			</div>
-		</div>
-	</div>-->
-
-
-
-
-
 
 
 
